fix(demo): line days chart labels visibility (#1179)
* fix(demo): line days chart labels visibility

* fix(demo): width of date-pickers in Complex example of line days chart

* chore(demo): improve performance of computing line days chart labels

--- a/projects/demo/src/modules/charts/line-days-chart/examples/2/index.less
+++ b/projects/demo/src/modules/charts/line-days-chart/examples/2/index.less
@@ -18,6 +18,10 @@
 
 .controls {
     display: flex;
+
+    .b-form {
+        flex: 1;
+    }
 }
 
 .legend {
